Fix multiple known issues and technical debt from README